src/sf/src/main/default/objects/Transaction__c/fields/CashSchedulerId__c.field-meta.xml
<CustomField>
    <fullName>CashSchedulerId__c</fullName>
    <externalId>true</externalId>
    <label>Cash Scheduler Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>