src/sf/src/main/default/objects/Transaction__c/validationRules/Not_Enough_Money_On_Wallet.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Enough_Money_On_Wallet</fullName>
    <active>true</active>
    <errorConditionFormula>Category__r.TypeName__c = $CustomMetadata.TransactionType__mdt.Expense.DeveloperName
&amp;&amp; Wallet__r.Balance__c - Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>There is not enough money in the wallet for the transaction</errorMessage>
</ValidationRule>