src/sf/src/main/default/objects/Transaction__c/listViews/AllTransactions.listView-meta.xml
<ListView>
    <fullName>AllTransactions</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Category__c</columns>
    <columns>Wallet__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>
</ListView>